--- a/css/style.css
+++ b/css/style.css
@@ -91,16 +91,16 @@ h2 span {
 }
 
 .news__section {
-    position: relative;
     width: 100%;
-    height: 700px;
-    padding: 100px 0 0 0;
+    height: 600px;
+    padding: 100px 0;
+    position: relative;
 }
 
 .news__sub-ttl {
     position: absolute;
     top: 5%;
-    left: 30%;
+    left: 25%;
     font-size: 20px;
     font-family: "Indie Flower", cursive;
     color:  rgb(201, 9, 111);
@@ -108,24 +108,23 @@ h2 span {
 
 .news__main-ttl {
     position: absolute;
-    top: 8%;
-    left: 30%;
+    top: 10%;
+    left: 25%;
     font-size: 25px;
     font-weight: bold;
     color: gray;
 }
 
 .news__content {
-    position: absolute;
-    top: 13%;
-    left: 30%;
+    margin: 50px auto;
+    width: 50%;
     color: gray;
-    font-size: 18px;
-    line-height: 100px;
+    font-size: 12px;
+    line-height: 70px;
     list-style: none;
     border-top: 3px solid lightgray;
     border-bottom: 3px solid lightgray;
-    padding: 60px 0;
+    padding: 50px 0 30px 0;
 }
 
 .news-item {
@@ -135,7 +134,7 @@ h2 span {
 .news-item span {
     background:rgb(201, 9, 111);
     color: white;
-    font-size: 20px;
+    font-size: 14px;
     border-radius: 20px;
     padding: 10px 15px;
     margin: 0 30px;
@@ -198,13 +197,12 @@ h2 span {
 }
 
 .service__section {
-    position: relative;
     width: 100%;
     height: 900px;
     padding: 100px 0;
     box-sizing: border-box;
+    position: relative;
 }
-
 .service__sub-ttl {
     position: absolute;
     top: 5%;
@@ -216,7 +214,7 @@ h2 span {
 
 .service__main-ttl {
     position: absolute;
-    top: 8%;
+    top: 10%;
     left: 10%;
     font-size: 25px;
     font-weight: bold;
@@ -227,113 +225,112 @@ h2 span {
     display: grid;
     grid-template-rows: 300px 300px;
     grid-template-columns: 1fr 1fr;
-    padding: 50px 150px; 
+    padding: 50px 150px;
+}
+
+.service__card_img img {
+    width: 100%;
 }
 
 .service__card_vol1 {
     grid-column: 1/2;
     grid-row: 1/3;
     background-color: rgb(176, 6, 97);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.service__card__img1 img {
-    display: block;
-    margin: 30px auto;
-    width: 25%;
+.service__card__img1 {
+    margin: 0 auto;
+    width: 40%;
 }
 
 .service__content_vol1 {
-    margin: 50px auto;
+    margin: 30px auto;
     text-align: center;
-    font-size: 25px;
-    font-weight: bold;
+    font-size: 20px;
     color: white;
 }
 
 .service__content__text_vol1 {
-    margin: 50px auto;
-    text-align: center;
-    line-height: 50px;
-    font-size: 20px;
-    font-weight: 100;
+    margin: 30px auto;
+    text-align: left;
+    line-height: 30px;
+    font-size: 14px;
     color: white;
+}
+
+.service__card__img2 {
+    width: 40%;
 }
 
 .service__card_vol2 {
     grid-column: 2/3;
     grid-row: 1/2;
     background-color: rgb(166, 88, 129);
-}
-
-.service__card__img2 img {
-    display: block;
-    margin: 15% 2%;
-    width: 28%;
+    display: grid; 
+    grid-template-rows: 40% 60%;
 }
 
 .service__content_vol2 {
-    margin: 20px auto;
+    margin: -80% 0 0 80%;
+    width: 140px;
     text-align: center;
-    font-size: 25px;
+    font-size: 20px;
     color: white;
     font-weight: bold;
-    position: absolute;
-    top: 25%;
-    right: 25%;
 }
 
 .service__content__text_vol2 {
-    margin: 20px 30px;
+    padding: 20px;
+    margin: 0 0 0 100%;
+    width: 240px;
     text-align: left;
-    line-height: 35px;
-    font-size: 12px;
-    font-weight: 100;
+    line-height: 30px;
+    font-size: 14px;
     color: white;
-    position: absolute;
-    top: 30%;
-    right: 13%;
+    width: 100%;
+}
+
+.service__card__img3 {
+    width: 40%;
 }
 
 .service__card_vol3 {
     grid-column: 2/3;
     grid-row: 2/3;
     background-color: rgb(172, 134, 162);
-}
-
-.service__card__img3 img {
-    display: block;
-    margin: 65px 10px;
-    width: 28%;
+    display: grid; 
+    grid-template-rows: 40% 60%;
 }
 
 .service__content_vol3 {
-    margin: 20px auto;
+    margin: -80% 0 0 80%;
+    width: 140px;
     text-align: center;
-    font-size: 25px;
+    font-size: 20px;
     color: white;
     font-weight: bold;
-    position: absolute;
-    top: 55%;
-    right: 25%;
 }
 
 .service__content__text_vol3 {
-    margin: 20px 30px;
+    padding: 20px;
+    margin: 0 0 0 100%;
+    width: 240px;
     text-align: left;
-    line-height: 35px;
-    font-size: 12px;
-    font-weight: 100;
+    line-height: 30px;
+    font-size: 14px;
     color: white;
-    position: absolute;
-    top: 60%;
-    right: 13%;
+    width: 100%;
 }
 
 .blog__section {
     position: relative;
     width: 100%;
     height: 800px;
-    padding: 100px 0;
+    padding: 150px 0;
     box-sizing: border-box;
     background: rgb(241, 238, 238);
 }
@@ -349,7 +346,7 @@ h2 span {
 
 .blog__main-ttl {
     position: absolute;
-    top: 8%;
+    top: 10%;
     left: 10%;
     font-size: 25px;
     font-weight: bold;
@@ -371,6 +368,7 @@ h2 span {
     border: 1px solid rgba(0 0 0 0.1);
     border-radius: 20px;
     background: white;
+    margin-top: 15px;
     margin-right: 5px;
     position: relative;
     overflow: hidden;
@@ -427,7 +425,7 @@ h2 span {
 
 .blog__btn {
     position: absolute;
-    bottom: 25%;
+    bottom: 20%;
     left: 42%;
     display: inline-block;
     text-align: center;
@@ -446,7 +444,7 @@ h2 span {
 .company__section {
     position: relative;
     width: 100%;
-    height: 800px;
+    height: 700px;
     padding: 100px 0;
 }
 
@@ -461,7 +459,7 @@ h2 span {
 
 .company__main-ttl {
     position: absolute;
-    top: 8%;
+    top: 10%;
     left: 10%;
     font-size: 25px;
     font-weight: bold;
@@ -470,7 +468,7 @@ h2 span {
 
 .company__table {
     position: absolute;
-    top: 15%;
+    top: 20%;
     left: 10%;
     color: gray;
 }
@@ -487,7 +485,7 @@ table th,
 table td {
     padding: 50px;
     text-align: left;
-    font-size: 25px;
+    font-size: 20px;
     border: 1px solid #ddd;
 }
 
@@ -511,92 +509,76 @@ table td {
     align-items: flex-start;
     width: 100%;
     height: 400px;
-    padding:100px 0;
-    position: relative;
+    padding: 100px;
     box-sizing: border-box;
+}
+
+.recruit__img,
+.interview__img {
+    width: 50vw;
+    position: relative;
 }
 
 .recruit__img img,
 .interview__img img {
     object-fit: cover;
-}
-
-.recruit__img {
-    height: auto;
-    width: 50vw;
-    position: relative;
-}
-
-.recruit__img img {
     width: 100%;
+    height: 50%;
 }
 
-.recruit__content-ttl {
+.recruit__text,
+.interview__text {
+    text-align: center;
+    color: white;
+    font-size: 28px;
+    font-weight: bold;
     position: absolute;
     top: 50%;
-    left: 25%;
-    font-size: 25px;
-    color: white;
-}
-
-.interview__img {
-    position: absolute;
     left: 50%;
-    height: auto;
-    width: 50vw;
-}
-
-.interview__img img {
-    width: 100%;
-}
-
-.interview__content-ttl {
-    position: absolute;
-    top: 50%;
-    left: 67%;
-    font-size: 25px;
-    color: white;
+    transform: translate(-50%, -50%);
 }
 
 .contact {
     width: 100%;
-    height: 200px;
+    height: 300px;
     padding: 100px 0;
-    position: relative;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
 }
 
 .contact__text {
-    position: absolute;
-    top: 10%;
-    left: 25%;
-    font-size: 25px;
+    text-align: center;
+    font-size: 20px;
     font-weight: bold;
     color: gray;
+    position: relative;
 }
 
-.contact__text::before {
+.contact__text::after {
     content: "";
     position: absolute;
-    top: 50px;
-    left: 53%;
-    height: 70px;
+    top: 30px;
+    left: 50%;
+    height: 50px;
     border-left: 3px solid rgb(201, 9, 111);
 }
-
 .contact__btn {
-    position: absolute;
-    bottom: 35%;
-    left: 35%;
+    position: relative;
+    top: 70%;
+    left: 10px;
     display: inline-block;
     text-align: center;
-    line-height: 2em;
-    vertical-align: center;
     font-size: 20px;
-    width: 350px;
-    height: 50px;
+    width: 280px;
+    height: 20px;
     padding: 10px 0;
     box-shadow: 5px 15px 3px 0 rgb(153, 3, 83);
-    background: linear-gradient(90deg, #f449a4,#b0056f);
+    background: linear-gradient(90deg, #f449a4, #b0056f);
     color: white;
     border-radius: 60px;
 }
@@ -604,34 +586,26 @@ table td {
 .contact__btn::before {
     content: "";
     position: absolute;
-    bottom: 20%;
-    left: 10%;
+    top: 50%;
+    left: 10px;
     background: url(../img/mail.svg) no-repeat;
     background-size: cover;
     width: 40px;
     height: 30px;
+    vertical-align: center;
     transform: translateY(-50%);
 }
 
 footer {
     width: 100%;
     height: 100px;
-    position: relative;
     background-color: rgb(238, 236, 236);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .copyright {
-    position: absolute;
-    top: 50%;
-    left: 54%;
     color: rgb(140, 137, 137);
-    text-align: center;
-    transform: translate(-50%, -50%);
     font-size: 16px;
-}
-
-@media screen and (min-width: 1000px) and (max-width: 1500px) {
-    main {
-      display: none;
-    }
 }
