--- a/css/style.css
+++ b/css/style.css
@@ -609,3 +609,9 @@ footer {
         max-width: 1000px;
     }
 }
+
+@media screen and (min-width: 1500px) {
+    body {
+        max-width: 1500px;
+    }
+}
