--- a/css/style.css
+++ b/css/style.css
@@ -161,15 +161,15 @@ h2 span {
 .about__main-ttl {
     position: absolute;
     top: 10%;
-    left: 35%;
+    left: 40%;
     font-size: 25px;
     font-weight: bold;
     color: gray;
 }
 
 .about__text1 {
-    position: absolute;
-    top: 30%;
+    position: relative;
+    margin-top: 20px;;
     left: 10%;
     font-size: 20px;
     line-height: 30px;
@@ -187,9 +187,9 @@ h2 span {
 
 .about__image {
     position: absolute;
-    top: 20%;
-    left: 55%;
-    transform: scale(0.7);
+    top: 10%;
+    left: 50%;
+    transform: scale(0.6);
 }
 
 .about__image img {
