--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,33 @@ h2 span {
     height: 500px;
     background: rgb(241, 238, 238);
     box-sizing: border-box;
+    padding: 100px 0 0 200px;
+}
+
+.about__sub-ttl {
+    position: absolute;
+    top: 5%;
+    left: 50%;
+    font-size: 20px;
+    font-family: "Indie Flower", cursive;
+    color:  rgb(201, 9, 111);
+}
+
+.about__main-ttl {
+    position: absolute;
+    top: 15%;
+    left: 40%;
+    font-size: 25px;
+    font-weight: bold;
+    color: gray;
+}
+
+.about__section {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    background: rgb(241, 238, 238);
+    box-sizing: border-box;
     padding: 100px 0;
 }
 
@@ -167,45 +194,37 @@ h2 span {
     color: gray;
 }
 
-.about__text1 {
-    position: relative;
-    margin-top: 20px;;
-    left: 10%;
-    font-size: 20px;
-    line-height: 30px;
-    color: gray;
+.about__text {
+    display: flex;
+    justify-content: space-around;
 }
-
-.about__text2 {
-    position: absolute;
-    top: 55%;
-    left: 10%;
+.about__text-ttl {
+    margin-top: 20px;
     font-size: 20px;
     line-height: 30px;
     color: gray;
+    white-space: nowrap;
 }
 
 .about__image {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: scale(0.6);
+    width: 30%;
 }
 
 .about__image img {
     width: 100%;
 }
 
+
 .service__section {
     width: 100%;
-    height: 900px;
-    padding: 100px 0;
-    box-sizing: border-box;
+    height: 700px;
+    padding: 200px 0;
+
     position: relative;
 }
 .service__sub-ttl {
     position: absolute;
-    top: 5%;
+    top: 20%;
     left: 10%;
     font-size: 20px;
     font-family: "Indie Flower", cursive;
@@ -214,7 +233,7 @@ h2 span {
 
 .service__main-ttl {
     position: absolute;
-    top: 10%;
+    top: 23%;
     left: 10%;
     font-size: 25px;
     font-weight: bold;
@@ -225,7 +244,7 @@ h2 span {
     display: grid;
     grid-template-rows: 300px 300px;
     grid-template-columns: 1fr 1fr;
-    padding: 50px 150px;
+    padding: 150px 100px;
 }
 
 .service__card_img img {
@@ -258,7 +277,7 @@ h2 span {
     margin: 30px auto;
     text-align: left;
     line-height: 30px;
-    font-size: 14px;
+    font-size: 12px;
     color: white;
 }
 
@@ -289,7 +308,7 @@ h2 span {
     width: 240px;
     text-align: left;
     line-height: 30px;
-    font-size: 14px;
+    font-size: 12px;
     color: white;
     width: 100%;
 }
@@ -321,7 +340,7 @@ h2 span {
     width: 240px;
     text-align: left;
     line-height: 30px;
-    font-size: 14px;
+    font-size: 12px;
     color: white;
     width: 100%;
 }
