--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
+    width: 100%;
     max-width: 1500px;
-    margin: 0 auto;
 }
 
 a {
@@ -625,8 +625,8 @@ footer {
     font-size: 16px;
 }
 
-@media screen and (max-width: 1500px) {
+@media screen and (min-width: 1000px) and (max-width: 1500px) {
     body {
-        max-width: 1000px; 
+        margin: 0 auto; 
     }
 }
