--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ h2 span {
 }
 
 .service__content_vol2 {
-    margin: -80% 0 0 80%;
+    margin: -80% 0 0 90%;
     width: 140px;
     text-align: center;
     font-size: 20px;
@@ -306,7 +306,7 @@ h2 span {
 
 .service__content__text_vol2 {
     padding: 20px;
-    margin: 0 0 0 100%;
+    margin: auto 100%;
     width: 240px;
     text-align: left;
     line-height: 30px;
@@ -328,7 +328,7 @@ h2 span {
 }
 
 .service__content_vol3 {
-    margin: -80% 0 0 80%;
+    margin: -80% 0 0 90%;
     width: 140px;
     text-align: center;
     font-size: 20px;
@@ -338,7 +338,7 @@ h2 span {
 
 .service__content__text_vol3 {
     padding: 20px;
-    margin: 0 0 0 100%;
+    margin: auto 100%;
     width: 240px;
     text-align: left;
     line-height: 30px;
