--- a/css/style.css
+++ b/css/style.css
@@ -214,17 +214,16 @@ h2 span {
     width: 100%;
 }
 
-
 .service__section {
     width: 100%;
     height: 700px;
-    padding: 200px 0;
-
+    padding: 100px 0;
     position: relative;
 }
+
 .service__sub-ttl {
     position: absolute;
-    top: 20%;
+    top: 5%;
     left: 10%;
     font-size: 20px;
     font-family: "Indie Flower", cursive;
@@ -233,7 +232,7 @@ h2 span {
 
 .service__main-ttl {
     position: absolute;
-    top: 23%;
+    top: 10%;
     left: 10%;
     font-size: 25px;
     font-weight: bold;
@@ -244,13 +243,9 @@ h2 span {
     display: grid;
     grid-template-rows: 300px 300px;
     grid-template-columns: 1fr 1fr;
-    padding: 150px 100px;
+    padding: 100px 100px 150px;
     max-width: calc(100% - 10%);
     white-space: nowrap;
-}
-
-.service__card_img img {
-    width: 100%;
 }
 
 .service__card_vol1 {
@@ -263,88 +258,74 @@ h2 span {
     align-items: center;
 }
 
+.service__card_img img {
+    max-width: 100%;
+}
+
 .service__card__img1 {
-    margin: 0 auto;
     width: 40%;
 }
 
 .service__content_vol1 {
-    margin: 30px auto;
+    margin: 5% auto;
     text-align: center;
     font-size: 20px;
+    font-weight: bold;
     color: white;
 }
 
 .service__content__text_vol1 {
-    margin: 0 auto;
+    margin: 10% auto;
     text-align: left;
     line-height: 30px;
-    font-size: 14px;
+    font-size: 12px;
     color: white;
-}
-
-.service__card__img2 {
-    width: 40%;
 }
 
 .service__card_vol2 {
     grid-column: 2/3;
     grid-row: 1/2;
     background-color: rgb(166, 88, 129);
-    display: grid; 
-    grid-template-rows: 50% 50%;
-}
-
-.service__content_vol2 {
-    margin: -80% 0 0 90%;
-    width: 140px;
-    text-align: center;
-    font-size: 20px;
-    color: white;
-    font-weight: bold;
-}
-
-.service__content__text_vol2 {
-    padding: 20px;
-    margin: auto 100%;
-    width: 240px;
-    text-align: left;
-    line-height: 30px;
-    font-size: 12px;
-    color: white;
-    width: 100%;
-}
-
-.service__card__img3 {
-    width: 40%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 30px;
 }
 
 .service__card_vol3 {
     grid-column: 2/3;
     grid-row: 2/3;
     background-color: rgb(172, 134, 162);
-    display: grid; 
-    grid-template-rows: 50% 50%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 30px;
 }
 
+.service__card__img2,
+.service__card__img3 {
+    width: 40%;
+}
+
+.service__content_vol2,
 .service__content_vol3 {
-    margin: -80% 0 0 90%;
     width: 140px;
-    text-align: center;
+    text-align: left;
     font-size: 20px;
     color: white;
     font-weight: bold;
+    max-width: 100%;
 }
 
+.service__content__text_vol2,
 .service__content__text_vol3 {
-    padding: 20px;
-    margin: auto 100%;
     width: 240px;
     text-align: left;
     line-height: 30px;
     font-size: 12px;
     color: white;
     width: 100%;
+    white-space: nowrap;
 }
 
 .blog__section {
@@ -565,7 +546,7 @@ table td {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; /* 垂直方向に中央揃え */
+    align-items: center; 
 }
 
 .contact__text {
@@ -602,11 +583,11 @@ table td {
 .contact__btn::before {
     content: "";
     position: absolute;
-    top: 30%;
+    top: 40%;
     left: 10%;
     background: url(../img/mail.svg) no-repeat;
     background-size: cover;
-    width: 40px;
+    width: 30px;
     height: 30px;
     vertical-align: center;
     transform: translateY(-50%);
